samples/_failures_safe/1761708173_456c9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a115ecd1.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_a115ecd1.c:150:43: error: missing terminating " character
  150 |             case TOKEN_NUMBER: type_str = "NUMBER
      |                                           ^~~~~~~
./samples/SAFE/__tmp_a115ecd1.c:150:13: error: expected expression at end of input
  150 |             case TOKEN_NUMBER: type_str = "NUMBER
      |             ^~~~
./samples/SAFE/__tmp_a115ecd1.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a115ecd1.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a115ecd1.c:150:13: error: expected declaration or statement at end of input
